# FlappyBird

./: CMakeLists.txt
FlappyBird/: CMakeLists.txt  main.cpp
src/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  Drawable.h  GameApp.cpp  GameApp.h  GameLevel.cpp  GameLevel.h  GameWindow.cpp  GameWindow.h  Level.cpp  Level.h  Window.cpp  Window.h  main.cpp
